--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,7 +12,7 @@
    <h3>I'm big!</h3>
    <h2>I'm even bigger!</h2>
    <h1> I'm  the biggest!</h1>
-   <img src="https://www.holbertonschool.com/holberton-logo.png" alt="Holberton School">
+   <img src="https://www.holbertonschool.com/holberton-logo.png" alt="Holberton School.png">
    <a href="html_basic/tweets.html">Tweets</a>
    
 </body>
