--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,6 +5,28 @@
     <title>Nothin' much to see here...</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="C:\Users\GUser\Desktop\Coding Stuff P\Projects G & VSC\alx_html_css\html_basic\index.html">Home</a></li>
+            <li><a href="https://twitter.com/holbertonschool/status/1679496986301440003/photo/1?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1679496986301440003%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=file%3A%2F%2F%2FC%3A%2FUsers%2FGUser%2FDesktop%2FCoding20Stuff20P%2FProjects20G2020VSC%2Falx_html_css%2Fhtml_basic%2Ftweets.html">Tweet</a></li>
+            <li><a href="https://www.holbertonschool.com/">Holberton School</a></li>
+        </ul>
+            </header>
+            <main>
+        <article>
+            <table>
+                <thead><tr><th>Name</th><th>Age</th><th>Country</th></tr></thead>
+                <tbody><tr><td>John</td><td>25</td><td>USA</td></tr></tbody>
+                <tbody><tr><td>Emily</td><td>28</td><td>Canada</td></tr></tbody>
+                <tbody><tr><td>Michael</td><td>32</td><td>Australia</td></tr></tbody>
+                <tbody><tr><td>Sophia</td><td>21</td><td>UK</td></tr></tbody>
+                
+            </table>
+        </article>
+        <aside>
+            <p>Placeholder, to add text later.</p>
+        </aside>
+            </main> 
    <p > Hi there!</p>
    <p>I'm Bethel</p>
    <p>Nice to meet you</p>
@@ -12,8 +34,10 @@
    <h3>I'm big!</h3>
    <h2>I'm even bigger!</h2>
    <h1> I'm  the biggest!</h1>
-   <a href="https://www.holbertonschool.com/holberton-logo.png"></a>
-   <a href="html_basic/tweets.html">Tweets</a>
-   
+   <img src="Images/hs.png" alt="Holberton School">
+   <a href="C:\Users\GUser\Desktop\Coding Stuff P\Projects G & VSC\alx_html_css\html_basic\tweets.html">Tweets</a>
+   <footer>
+    Made by Bethel Onyealilachi - <a href="https://www.youtube.com/channel/UCUm3peSNjhcKqxrYD0WDcUg" target="_blank">My YouTube</a>
+       </footer>
 </body>
 </html>
