--- a/html_advanced/indexreal.html
+++ b/html_advanced/indexreal.html
@@ -116,9 +116,12 @@
         <!-- vid_block_main -->
         <div class="vid_block_main">
             <div class="vid_block_main1">
-                <img src="Assets/Screenshot (716).png" alt="Living room">
-                <h3>Background Edit</h3>
-                <p>Day</p>
+                <img src="Assets/Untitled244_20230110184953.png" alt="OC Head">
+                <h3>OC Part Edit</h3>
+                <video width="624px" height="1024px" controls>
+                <source src="Assets/Untitled244.mp4" type="video/mp4">
+                </video>
+                <p>OC Name: Undefined</p>
                 <div class="vid_block_main1a">
                     <img src="Assets/blossom.png" alt="Author">
                     <h2>Blossom</h2>
@@ -130,9 +133,12 @@
             </div>
 
             <div class="vid_block_main2">
-                <img src="Assets/Oof.png" alt="Character plot">
+                <img src="Assets/Untitled240_20230106141900.png" alt="Full body">
                 <h3>Character Edit</h3>
-                <p>Shocking..</p>
+                <video width="1024px" height="624px" controls>
+                    <source src="Assets/Untitled240.mp4" type="video/mp4">
+                </video>
+                <p>OC Name: Rose</p>
                 <div class="vid_block_main2a">
                     <img src="Assets/angel.png" alt="Author">
                     <h2>Angel</h2>
@@ -140,14 +146,17 @@
                 <div class="vid_block_main2b">
                     <img src="Assets/Untitled design.png" alt="1 star">
                     <img src="Assets/Untitled design.png" alt="1 star">
-                    <p>Okay</p>
+                    <p>Not bad</p>
                 </div>
             </div>
 
             <div class="vid_block_main3">
-                <img src="Assets/Model start.png" alt="Advert cover">
-                <h3>Model Branding Edit</h3>
-                <p>Models</p>
+                <img src="Assets/Untitled235_20221231235819.png" alt="Full body">
+                <h3>Character Drawing & Edit</h3>
+                <video width="624px" height="1024px" controls>
+                 <source src="Assets/Untitled235.mp4" type="video/mp4">
+                </video>
+                <p>OC Name: Maxwell</p>
                 <div class="vid_block_main3a">
                     <img src="Assets/alissa.png" alt="Author">
                     <h2>Alissa</h2>
@@ -163,7 +172,10 @@
             <div class="vid_block_main4">
                 <img src="Assets/Untitled242_20230106155944.png" alt="Magazine cover">
                 <h3>Cover edit</h3>
-                <p>Model</p>
+                 <video width="624px" height="1024px" controls>
+                 <source src="Assets/Untitled242.mp4" type="video/mp4">
+                 </video>
+                <p>OC Name: Briane</p>
                 <div class="vid_block_main4a">
                     <img src="Assets/bella.png" alt="Author">
                     <h2>Arabella</h2>
