--- a/html_advanced/indexreal.html
+++ b/html_advanced/indexreal.html
@@ -117,7 +117,7 @@
         <div class="vid_block_main">
             <div class="vid_block_main1">
                 <img src="Assets/Untitled244_20230110184953.png" alt="OC Head">
-                <h3>OC Part Edit</h3>
+                <h3>Video 1: OC Part Edit</h3>
                 <video width="624px" height="1024px" controls>
                 <source src="Assets/Untitled244.mp4" type="video/mp4">
                 </video>
@@ -134,7 +134,7 @@
 
             <div class="vid_block_main2">
                 <img src="Assets/Untitled240_20230106141900.png" alt="Full body">
-                <h3>Character Edit</h3>
+                <h3>Video 2: Character Edit</h3>
                 <video width="1024px" height="624px" controls>
                     <source src="Assets/Untitled240.mp4" type="video/mp4">
                 </video>
@@ -152,7 +152,7 @@
 
             <div class="vid_block_main3">
                 <img src="Assets/Untitled235_20221231235819.png" alt="Full body">
-                <h3>Character Drawing & Edit</h3>
+                <h3>Video 3: Character Drawing & Edit</h3>
                 <video width="624px" height="1024px" controls>
                  <source src="Assets/Untitled235.mp4" type="video/mp4">
                 </video>
@@ -171,7 +171,7 @@
 
             <div class="vid_block_main4">
                 <img src="Assets/Untitled242_20230106155944.png" alt="Magazine cover">
-                <h3>Cover edit</h3>
+                <h3>Video 4: Cover edit</h3>
                  <video width="624px" height="1024px" controls>
                  <source src="Assets/Untitled242.mp4" type="video/mp4">
                  </video>
