--- a/html_advanced/indexreal.html
+++ b/html_advanced/indexreal.html
@@ -31,6 +31,7 @@
 
     <main>
 
+        <!-- Banner -->
 <section>
     <div>
     <!-- block1 -->
@@ -42,7 +43,6 @@
 <!-- end of block1 -->
 </div>
 
-<!-- Banner -->
 <!-- block2 -->
 <div class="block2">
 <h1>TITLE</h1>
@@ -197,6 +197,42 @@
 
 <!-- end of videos -->
 
+<!-- Membership -->
+<section>
+    <div class="memb_block_main">
+        <h1>Membership</h1>
+        <div class="memb_block_main1">
+        <div class="memb_block_main1a">
+         <img src="Assets/memb1.png" alt="Bronze Membership">
+         <h4>Free Package!</h4>
+         <p>No pay!</p>
+        </div>
+
+
+        <div class="memb_block_main1b">
+            <img src="Assets/memb2.png" alt="Silver Membership">
+            <h4>Plus Package! @$2.00/ month</h4>
+            <p>Access More!</p>
+        </div>
+
+
+        <div class="memb_block_main1c">
+            <img src="Assets/memb3.png" alt="Gold Membership">
+            <h4>+Plus Package! @$3.50/ month</h4>
+            <p>Access Even More!</p>
+        </div>
+        
+        
+        <div class="memb_block_main1d">
+            <img src="Assets/memb4.png" alt="Diamond Membership">
+            <h4>Everything Package! @$5.00/ month</h4>
+            <p>Access All!!!</p>
+        </div>
+        </div>
+
+    </div>
+</section>
+<!-- end of membership -->
 
     </main>
 </body>
