--- a/html_advanced/indexreal.html
+++ b/html_advanced/indexreal.html
@@ -234,6 +234,59 @@
 </section>
 <!-- end of membership -->
 
+
+<!-- FAQ -->
+<section>
+    <div class="FAQ_block_main">
+        <h1>FAQs</h1>
+        <div class="row_blocks">
+        <!-- rowblock1 -->
+        <div class="row">
+        <div class="item">
+        <h4>Apps</h4>
+        <p>What apps should I use to edit?</p>
+        </div>
+        <div class="item">
+        <h4>Platforms</h4>
+        <p>What platforms can I use to post?</p>
+        </div>
+         </div>
+         <!-- end of rowblock1 -->
+
+         <!-- rowblock2 -->
+         <div class="row">
+            <div class="item">
+        <h4>Learning</h4>
+        <p>Can I learn to edit?</p>
+            </div>
+            <div class="item">
+         <h4>Improvements</h4>
+         <p>What can I do to edit better?</p>
+            </div>
+         </div>
+         <!-- end of rowblock2 -->
+        </div>
+
+    </div>
+</section>
+<!-- end of FAQ -->
     </main>
+
+    <footer>
+<div class="footer">
+    <div class="footer_main">
+        <div class="row">
+            <img src="" alt="">
+            <div class="img_links">
+        <a href="https://youtu.be/0j_6C9evrWI"><img src="Assets/Thumbnail.png" alt="Edit1"></a>
+        <a href="https://youtu.be/H_UnMeeJfUY"><img src="Assets/Thumbnailedit.png" alt="Edit2"></a>
+        <a href="https://youtu.be/mXVZixtLG9k"><img src="Assets/Untitled246_20230405223754.png" alt="Edit3"></a>
+            </div>
+        </div>
+        <p>Made by Bethel Onyealilachi &copy; 2023 </p>
+
+    </div>
+</div>
+    </footer>
 </body>
 </html>
