starting styles commit

--- a/html_advanced/css_basic/index.html
+++ b/html_advanced/css_basic/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
     <title>Nothin' much to see here...</title>
 </head>
-<body>
+<body class="container">
     <header>
         <ul>
             <li><a href="C:\Users\GUser\Desktop\Coding Stuff P\Projects G & VSC\alx_html_css\html_basic\index.html">Home</a></li>
@@ -14,7 +14,7 @@
             <li><a href="https://www.holbertonschool.com/">Holberton School</a></li>
         </ul>
             </header>
-            <main>
+            <main class="container">
         <article>
             <table>
                 <thead><tr><th>Name</th><th>Age</th><th>Country</th></tr></thead>
