responsive web design updates

--- a/html_advanced/css_basic/index.html
+++ b/html_advanced/css_basic/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <link rel="stylesheet" href="base.css">
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
     <title>Nothin' much to see here...</title>
 </head>
-<body class="container">
+<body class="container" class="works_on_smartphone">
     <header>
         <ul>
             <li><a href="C:\Users\GUser\Desktop\Coding Stuff P\Projects G & VSC\alx_html_css\html_basic\index.html">Home</a></li>
@@ -15,7 +16,7 @@
         </ul>
             </header>
             <main class="container">
-        <article>
+        <article class="child">
             <table>
                 <thead><tr><th>Name</th><th>Age</th><th>Country</th></tr></thead>
                 <tbody><tr><td>John</td><td>25</td><td>USA</td></tr></tbody>
@@ -25,7 +26,7 @@
                 
             </table>
         </article>
-        <aside>
+        <aside class="child">
             <p>Placeholder, to add text later.</p>
         </aside>
             </main> 
