--- a/html_advanced/css_basic/index.html
+++ b/html_advanced/css_basic/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
     <title>Nothin' much to see here...</title>
 </head>
-<body class="container" class="works_on_smartphone">
+<body class="works_on_smartphone">
     <header>
         <ul>
             <li><a href="C:\Users\GUser\Desktop\Coding Stuff P\Projects G & VSC\alx_html_css\html_basic\index.html">Home</a></li>
@@ -15,7 +15,7 @@
             <li><a href="https://www.holbertonschool.com/">Holberton School</a></li>
         </ul>
             </header>
-            <main class="container">
+            <main>
         <article class="child">
             <table>
                 <thead><tr><th>Name</th><th>Age</th><th>Country</th></tr></thead>
