allowed style changes

--- a/html_advanced/css_basic/index.html
+++ b/html_advanced/css_basic/index.html
@@ -9,7 +9,9 @@
 </head>
 <body class="works_on_smartphone">
     <header>
+       
         <ul>
+            <li class="logo">&#127891;</li>
             <li><a href="C:\Users\GUser\Desktop\Coding Stuff P\Projects G & VSC\alx_html_css\html_basic\index.html">Home</a></li>
             <li><a href="https://twitter.com/holbertonschool/status/1679496986301440003/photo/1?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1679496986301440003%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=file%3A%2F%2F%2FC%3A%2FUsers%2FGUser%2FDesktop%2FCoding20Stuff20P%2FProjects20G2020VSC%2Falx_html_css%2Fhtml_basic%2Ftweets.html">Tweet</a></li>
             <li><a href="https://www.holbertonschool.com/">Holberton School</a></li>
@@ -18,6 +20,9 @@
             <main>
         <article class="child">
             <table>
+                <caption> Employees at Holberton
+                    Institute
+                </caption>
                 <thead><tr><th>Name</th><th>Age</th><th>Country</th></tr></thead>
                 <tbody><tr><td>John</td><td>25</td><td>USA</td></tr></tbody>
                 <tbody><tr><td>Emily</td><td>28</td><td>Canada</td></tr></tbody>
@@ -27,7 +32,7 @@
             </table>
         </article>
         <aside class="child">
-            <p>Placeholder, to add text later.</p>
+            <p>This is nice.</p>
         </aside>
             </main> 
    <p > Hi there!</p>
